<resources>
    <string name="app_name">Treasure Search System</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register_here">Register</string>
    <string name="confirmation">Are you sure you want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="deletion_confirmation_text">Are you sure you want to delete your account?</string>
    <string name="bio_text">Adventurer at heart, always on the lookout for the next hidden treasure! Whether it’s a mountain hike, a dense forest exploration, or a coastal treasure hunt, I’m up for the challenge. Lover of riddles, nature trails, and the thrill of uncovering secrets left by fellow explorers.</string>
    <string name="username_text">Username</string>
    <string name="ta_kai_9999_nsurasti_lobiai_15_nsukurti_lobiai_10">Points: 9999\nFound treasures: 15\nCreated treasures: 10\nLast seen: 2024/11/18</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="private_profile">Private Profile</string>
    <string name="share_location">Share Location</string>
    <string name="vibration_for_notifications">Vibration for notifications</string>
    <string name="sound">Sound</string>
    <string name="delete_account">Delete Account</string>
    <string name="ok">OK</string>
    <string name="this_is_a_notification_message">This is a notification message</string>
    <string name="manage_caches">View treasures</string>
    <string name="add_cache">Add treasure</string>
    <string name="manage_groups">View groups</string>
    <string name="cache_name">Treasure name</string>
    <string name="cache_description">Treasure description</string>
    <string name="location_info">Location information</string>
    <string name="restricted">Restricted</string>
    <string name="assign">Assign</string>
    <string name="assign_group">Assign group</string>
    <string name="assign_person">Assign person</string>
    <string name="submit">Create</string>
    <string name="category">Category</string>
    <string name="select_category">Select category</string>
    <string name="add_new_category">Add new category</string>
    <string name="add_category">Add</string>
    <string name="category_description">Category description</string>
    <string name="choose_image">Choose image</string>
    <string name="image_placeholder">Upload image</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="choose_location">Choose location on the map</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="publicate">Public</string>
    <string name="rated_complexity">Rated complexity</string>
    <string name="user_rating">User rating</string>
    <string name="zone_radius">Zone radius</string>
    <string name="edit_cache">Edit treasure</string>
    <string name="edit_theme">Edit theme</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this treasure?</string>
    <string name="approved">Approved</string>
    <string name="not_approved">Not approved</string>
    <string name="zone_radius_dialog_title">Set zone size</string>
    <string name="radius_value">Radius: m</string>
    <string name="confirm_radius">Confirm</string>
    <string name="theme_name">Theme name</string>
    <string name="theme_description">Theme description</string>
    <string name="timer_type">Choose timer</string>
    <string name="zone_enter_timer">Timer starts upon entering the zone</string>
    <string name="absolute_time_timer">Absolute time</string>
    <string name="bundled_caches">Bundled hidden objects</string>
    <string name="caches_to_bundle">Enter number of bundled objects (up to 5)</string>
    <string name="location_restrictions">Location restrictions</string>
    <string name="add_bundle_cache">Add additional treasure</string>
    <string name="assign_users">Assign person</string>
    <string name="assign_groups">Assign group</string>
    <string name="select_image">Select image</string>
    <string name="submit_cache">Add treasure</string>
    <string name="private_cache">Private</string>
    <string name="new_category">New category</string>
    <string name="difficulty">Difficulty</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="enter_time">Enter Time</string>
    <string name="theme_timing">Theme Timing</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="save_changes">save</string>
    <string name="notifications">Notifications</string>
    <string name="preferences">Preferences</string>
    <string name="notification_icon">Important</string>
</resources>
