<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache_name"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/cacheNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cache_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache_description"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/cacheDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cache_description"
            android:inputType="textMultiLine" />
        <CheckBox
        android:id="@+id/privateCacheCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restricted"
        android:visibility="visible"
        tools:visibility="visible" />

        <Button
            android:id="@+id/assignGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_group"
            tools:visibility="gone"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/groupListView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/assignPersonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_person"
            tools:visibility="gone"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/userListView"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:visibility="gone" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textStyle="bold"
            android:paddingBottom="8dp" />
        <TextView
            android:id="@+id/difficultyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty" />
        <SeekBar
            android:id="@+id/difficultySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="500" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp" />

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <ImageView
            android:id="@+id/cacheImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.532"
            android:visibility="gone" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_category"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <CheckBox
            android:id="@+id/addNewCategoryCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_category" />

        <EditText
            android:id="@+id/newCategoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_category"
            android:visibility="gone" />

        <TextView
            android:id="@+id/categoryDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_description"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/categoryDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_description"
            android:inputType="textMultiLine"
            android:visibility="gone" />

        <Button
            android:id="@+id/addCategoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:visibility="gone" />



        <Button
            android:id="@+id/submitCacheButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>